feat: separate stage and request priorities
